public class Viento extends Instrumento{
    public Viento(String tipo, String codigo, int precio, int stock, String material) {
        super(tipo, codigo, precio, stock, material);
    }
}
